# manochip

./: CMakeLists.txt  README.md
src/: cpu.cpp  cpu.h  main.cpp
